<resources>
    <string name="app_name">Forest</string>
    <string name="start">Plant</string>
    <string name="stop">Stop</string>
    <string name="return_home">Return home</string>
    <string name="view_report">View report</string>
    <string name="intro_to_app">Focus for your future</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string-array name="spinner_items">
        <item>Study</item>
        <item>Rest</item>
        <item>Housework</item>
        <item>Game</item>
        <item>Book</item>
    </string-array>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>

    <string name="dialog_start_game">dialog_start_game</string>
    <string name="cancel">cancel</string>
    <string name="deep_focus">Deep focus</string>
    <string name="deep_focus_description">You will  be guided back if you leave the app. Pro version users can set Allow List</string>
    <string name="count_exceed_time">Count exceeded time</string>
    <string name="count_exceed_time_description">Count up after Timer Mode ends</string>
    <string name="congratulation">Congratulations!</string>
    <string name="congratulation_message">You have successfully completed the task</string>

    <string name="why_whithered_tree"><u>Check why tree withered</u></string>
    <string name="failText">Oops! You can do better next time</string>

    <string name="title_why_tree_withered">Why did the tree wither?</string>
    <string name="reason_why_tree_withered_give_up">Because you give up</string>
    <string name="reason_why_tree_withered_non_focus">Because you are not focus on the app</string>
    <string name="ok">OK</string>

    <string name="completeText">Hooray! You\'ve planted 1 healthy tree(s) in your forest </string>
    <string name="breakTitle">Take a Break</string>
    <string name="breakSession">Sometimes it\'s okay to take a break</string>

    <string name="title_cancel_break_session">Skip break session?</string>
    <string name="description_cancel_break_session">You will be guided back to focus</string>

    <string name="failure_message">It\'ll get better next time!</string>
</resources>